# disk-cleaner

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cleaner.rs  lib.rs  main.rs  types.rs
src-tauri/src/scanner/: apps.rs  caches.rs  docker.rs  downloads.rs  installed_apps.rs  logs.rs  mod.rs  node_modules.rs  tools.rs  trash.rs
