[package]
name = "disk-cleaner"
version = "0.1.0"
edition = "2021"

[lib]
name = "disk_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "disk-cleaner"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
dirs-next = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
